<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BubblePet2</string>
    <string name="contentDescription">Imagen</string>
    <string name="fontMain" tools:ignore="ReferenceType">@font/roboto_regular</string>
    <string name="fontFormularioLogin" tools:ignore="ReferenceType">@font/roboto_regular</string>
    <string name="fontBtFormularioLogin" tools:ignore="ReferenceType">@font/lobster_two_regular</string>
    <string name="mailTxFormularioLogin">Correo electronico</string>
    <string name="signupLogin">No tienes una cuenta?</string>
    <string name="forgotPasswordTxLogin">Olvidaste la contraseña?</string>
    <string name="recoverPasswordTxLogin"><b>Recuperar aquí</b></string>
    <string name="signupLoginbtn"><b>Crear perfil</b></string>
    <string name="startlogin"><b>Iniciar Sesión</b></string>
    <string name="txBtSendMailForgotPassword">Recuperar</string>
    <string name="txInfoForgotPassword">Se le enviara un mensaje de recuperacion de su cuenta a la direccion de correo electronico vinculada del usuario.</string>
    <string name="tx1FooterOpUser">Configuración</string>
    <string name="tx2FooterOpUser">Editar Perfil</string>
    <string name="txTopicShopHeaderShop"><b>Tienda</b></string>
    <string name="txTopicConfigHeaderShop"><b>Configuración</b></string>
    <string name="nameUser"><b>Usuario de Ika</b></string>
    <string name="mailUser">Correo de usuario</string>
    <string name="textUserNameEditProfile">Nombre de usuario</string>
    <string name="hintUserNameEditProfile">Nombre de usuario</string>
    <string name="textNameEditProfile">Nombre</string>
    <string name="hintNameEditProfile">Nombre</string>
    <string name="textBiografiaEditProfile">Biografia del Perfil</string>
    <string name="hintBiografiaEditProfile">Biografia</string>
    <string name="textPasswordEditProfile">Contraseña de tu cuenta</string>
    <string name="hintPasswordEditProfile">Contraseña</string>
    <string name="textoBotonEditProfile">Guardar</string>
    <string name="textoBotonCerrarSesionEditProfile">Cerrar Sesion</string>
    <string name="fontTopicSignUp" tools:ignore="ReferenceType">@font/roboto_bold</string>
    <string name="fontHintSignUp" tools:ignore="ReferenceType">@font/roboto_regular</string>
    <string name="fontInfoSignUp" tools:ignore="ReferenceType">@font/roboto_bold</string>
    <string name="textMailSignUp">Ingresa un correo electronico</string>
    <string name="hintMailSignUp">Correo electronico</string>
    <string name="textPasswordSignUp">Ingresa una contraseña</string>
    <string name="hintPasswordSignUp">contraseña</string>
    <string name="textoTittleSignUp">Crea tu cuenta</string>
    <string name="textoBotonSignUp"><b>Siguiente</b></string>
    <string name="fontTopicSignUpFinish" tools:ignore="ReferenceType">@font/roboto_bold</string>
    <string name="fontHintSignUpFinish" tools:ignore="ReferenceType">@font/roboto_regular</string>
    <string name="fontInfoSignUpFinish" tools:ignore="ReferenceType">@font/roboto_bold</string>
    <string name="textoTittleSignUpFinish">Datos de Usuario</string>
    <string name="textoTittleSignUpFinish2">Datos de Mascota</string>
    <string name="textUserSignUpFinish">Cual es tu nombre</string>
    <string name="hintUserSignUpFinish">Nombre</string>
    <string name="textUserNameSignUpFinish">Como te gustaria llamarte?</string>
    <string name="hintUserNameSignUpFinish">Nombre de usuario</string>
    <string name="textUserBiografiaSignUpFinish">Biografia del perfil</string>
    <string name="hintUserBiografiaSignUpFinish">Biografía</string>
    <string name="textoBotonSignUpFinish"><b>Finalizar</b></string>
    <string name="textPetSignUpFinish2">Cual es el nombre de tu mascota?</string>
    <string name="hintPetSignUpFinish2">Nombre</string>
    <string name="textPetEdadSignUpFinish2">Cual es la edad de tu mascota?</string>
    <string name="hintPetEdadSignUpFinish2">Edad</string>
    <string name="textPetColorSignUpFinish2">Cual es su color?</string>
    <string name="hintPetColorSignUpFinish2">Color</string>
    <string name="textPetRazaSignUpFinish2">Cual es su raza?</string>
    <string name="hintPetRazaSignUpFinish2">Raza</string>
    <string name="textPetEstadoSignUpFinish2">Cual es su stado de salud?</string>
    <string name="hintPetEstadoSignUpFinish2">Estado de salud</string>
    <string name="fontTargetaCategoriaFeed" tools:ignore="ReferenceType">@font/roboto_bold</string>
    <string name="fontTopicMainFeed" tools:ignore="ReferenceType">@font/roboto_bold</string>
    <string name="TopicMainFeed">Categorias</string>
    <string name="categoria1">Frutas o Verduras</string>
    <string name="categoria2">Bebidas</string>
    <string name="categoria3">Lacteos</string>
    <string name="categoria4">Pan</string>
    <string name="fontBiografiaUserHome" tools:ignore="ReferenceType">@font/roboto_regular</string>
    <string name="mail">Correo</string>
    <string name="password">Contraseña</string>
    <string name="txTopic1">Bienvenido</string>
    <string name="descriptionImg">Imagen</string>
    <string name="vTopic175">v1.7.5</string>
    <string name="vTx175">Se corrigieron algunos problemas internos del codigo y algunos fallos mostrados por discrepancias dentro del mismo.</string>
    <string name="vTopic176">v1.7.6</string>
    <string name="vTx176">Ahora el proyecto lo puedes encontrar en GitHub y puedes acceder a la documentacion de las versiones de la app.</string>
    <string name="vTopic177">v1.7.7</string>
    <string name="vTx177">Agregada la seccion de galeria de imagenes internas IKA.</string>
    <string name="opcion1">Información</string>
    <string name="opcion2">Version App</string>
    <string name="infoTopic1">Informacion de las versiones IKA</string>
    <string name="infoTxTopic1">Las versiones de la app se encuentran registradas manualmente por nuestros desarrolladores de IKA. Documentacion breve de los cambios de version en version con el fin de que viva la mejor experiencia dentro de IKA.</string>
    <string name="infoTopic2">Galeria de imagenes</string>
    <string name="infoTxTopic2">Aquí encontraras las imagenes internas de la app con el fin de que aprecies del arte de IKA a tu alcance.</string>
    <string name="version">Versión</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleHowtoUse">Presentación</string>
    <string name="title1HowtoUse">Presentación</string>
    <string name="info1HowtoUse">La pantalla de presentacion de la app Nos muestra una interfaz basica donde facilmente podras acceder a crear tu perfil de usuario o iniciar sesion en caso de ya tener una cuenta con nostros.</string>
    <string name="title2HowtoUse">Login</string>
    <string name="info2HowtoUse">La pantalla de login te mostrara un formulario donde podras ingresar tus datos respectivos a tu cuenta, para poder iniciar sesion. Tambien existe un boton para que puedas crearte una cuenta en caso de que no tengas ninguna.</string>
    <string name="title3HowtoUse">SignUp</string>
    <string name="info3HowtoUse">La pantalla de SignUp o registrase te enviara a un formulario donde podras rrellenar tus datos y los de tu mascota para que puedas crear tu cuenta de BubblePet.</string>
    <string name="title4HowtoUse">Información Pet</string>
    <string name="info4HowtoUse">Una vez creado el usuario se le enviara a una pantalla donde rellenara la informacion correspondiente de su mascota.</string>
    <string name="title5HowtoUse">Perfil del Usuario</string>
    <string name="info5HowtoUse">Una vez dentro del perfil del usuario encontras tu informacion y la de tu amigo peludo.</string>
    <string name="title6HowtoUse">Editar Perfil</string>
    <string name="info6HowtoUse">Aqui podras editar tu informacion y la de tu mascota. Una vez hecha la modificacion, deberas guardar los cambios y podras volver a tu perfel, encontraras tambien el boton para cerrar la sesion e incluso podras borrar tu cuenta.</string>
    <string name="titleAboutApp">Que es BubblePet?</string>
    <string name="title1AboutApp">Resumen</string>
    <string name="info1AboutApp">BubblePet es un lugar propicio y especial donde podras facilmente buscar una solucion a la problematica que en vuelve a nuestros amigos peludos para poder conseguir pareja. Solo deberas crear tu perfil con la informacion requerida y podras tener tu perfil para tu mascota.</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="edad">Edad</string>
    <string name="color">Color</string>
    <string name="raza">Raza</string>
    <string name="salud">Estado salud</string>
    <string name="telefono">Teléfono</string>
    <string name="nombrePet">Nombre Pet</string>
    <string name="userName">Nombre usuario</string>
    <string name="upDate">Guardar Cambios</string>
    <string name="closeSesion">Cerar Sesion</string>
    <string name="txUserName">Nombre de usuario</string>
    <string name="txUserMail">Correo del usuario</string>
    <string name="btEditProfile">Editar perfil</string>
    <string name="Pperson">Tu perfil</string>
    <string name="Pmascota">Perfil de mascota</string>
    <string name="titleOption1FragmentMenu">Acerca de nosotros</string>
    <string name="titleOption2FragmentMenu">Como usar la app?</string>
    <string name="titleOption3FragmentMenu">Terminos y condiciones</string>
    <string name="font_biografia_content_1" tools:ignore="ReferenceType">@font/roboto_regular</string>
    <string name="font_biografia_content" tools:ignore="ReferenceType">@string/font_biografia_content_1</string>
    <string name="text_biografia_content_1">Biografia del usuario</string>
    <string name="font_targeta_pet_content_1" tools:ignore="ReferenceType">@font/roboto_regular</string>
    <string name="font_targeta_pet_content_2" tools:ignore="ReferenceType">@font/roboto_regular</string>
    <string name="font_targeta_pet_content" tools:ignore="ReferenceType">@string/font_targeta_pet_content_1</string>
    <string name="font_targeta_pet_content_info" tools:ignore="ReferenceType">@string/font_targeta_pet_content_1</string>
    <string name="text_targeta_pet_content_1">Nombre</string>
    <string name="text_targeta_pet_content_2">Edad</string>
    <string name="text_targeta_pet_content_3">Color</string>
    <string name="text_targeta_pet_content_4">Raza</string>
    <string name="text_targeta_pet_content_5">Estado de Salud</string>
    <string name="text_targeta_pet_content_info_1">Nombre mascota</string>
    <string name="text_targeta_pet_content_info_2">Edad mascota</string>
    <string name="text_targeta_pet_content_info_3">Color mascota</string>
    <string name="text_targeta_pet_content_info_4">Raza de mascota</string>
    <string name="text_targeta_pet_content_info_5">Estado de Salud</string>
</resources>