<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundMain"
    tools:context=".FragmentMenu">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingRight="140dp"
        tools:ignore="RtlHardcoded,RtlSymmetry,UselessParent">

        <LinearLayout
            android:id="@+id/menuOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/marginVerticalContOptionFragmentMenu"
            android:background="@drawable/backgroundContOptionFragmentMenu"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/paddingContOptionFragmentMenu"
            android:paddingVertical="@dimen/paddingContOptionFragmentMenu"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/textMenuOption1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/fontMain"
                android:text="@string/titleOption1FragmentMenu"
                android:textColor="@color/colorTextMain"
                android:textSize="@dimen/sizeTextContOptionFragmentMenu" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menuOption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundContOptionFragmentMenu"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/paddingContOptionFragmentMenu"
            android:paddingVertical="@dimen/paddingContOptionFragmentMenu"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/textMenuOption2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/fontMain"
                android:text="@string/titleOption2FragmentMenu"
                android:textColor="@color/colorTextMain"
                android:textSize="@dimen/sizeTextContOptionFragmentMenu" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="204dp"
            android:layout_height="194dp"
            android:src="@drawable/dog_icon" />
    </LinearLayout>
</FrameLayout>