<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    android:layout_marginBottom="2dp"
    android:background="@color/colorBackgroundMain">

    <LinearLayout
        android:id="@+id/targeta_pet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="20dp">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imagePet"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/gris2"
                            android:contentDescription="@string/descriptionImg"
                            android:scaleType="centerCrop"
                            android:src="@drawable/default_image_global"
                            tools:ignore="TooDeepLayout" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/dimen_targeta_pet_padding_horizontal"
            android:paddingVertical="@dimen/dimen_targeta_pet_padding_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/dimen_targeta_pet_contenedor_padding_vertical">

                <androidx.percentlayout.widget.PercentRelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        app:layout_widthPercent="@dimen/dimen_targeta_pet_content_width_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_targeta_pet_content_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@string/font_targeta_pet_content"
                            android:text="@string/text_targeta_pet_content_1"
                            android:textAlignment="@integer/alignment_targeta_pet_content"
                            android:textColor="@color/color_targeta_pet_content"
                            android:textSize="@dimen/size_targeta_pet_content" />
                    </LinearLayout>

                    <LinearLayout
                        app:layout_widthPercent="@dimen/dimen_targeta_pet_content_width_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_targeta_pet_content_info_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@string/font_targeta_pet_content_info"
                            android:text="@string/text_targeta_pet_content_info_1"
                            android:textAlignment="@integer/alignment_targeta_pet_content_info"
                            android:textColor="@color/color_targeta_pet_content_info"
                            android:textSize="@dimen/size_targeta_pet_content_info" />
                    </LinearLayout>

                </androidx.percentlayout.widget.PercentRelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/dimen_targeta_pet_contenedor_padding_vertical">

                <androidx.percentlayout.widget.PercentRelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        app:layout_widthPercent="@dimen/dimen_targeta_pet_content_width_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_targeta_pet_content_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@string/font_targeta_pet_content"
                            android:text="@string/text_targeta_pet_content_2"
                            android:textAlignment="@integer/alignment_targeta_pet_content"
                            android:textColor="@color/color_targeta_pet_content"
                            android:textSize="@dimen/size_targeta_pet_content" />
                    </LinearLayout>

                    <LinearLayout
                        app:layout_widthPercent="@dimen/dimen_targeta_pet_content_width_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_targeta_pet_content_info_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@string/font_targeta_pet_content_info"
                            android:text="@string/text_targeta_pet_content_info_2"
                            android:textAlignment="@integer/alignment_targeta_pet_content_info"
                            android:textColor="@color/color_targeta_pet_content_info"
                            android:textSize="@dimen/size_targeta_pet_content_info" />
                    </LinearLayout>

                </androidx.percentlayout.widget.PercentRelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/dimen_targeta_pet_contenedor_padding_vertical">

                <androidx.percentlayout.widget.PercentRelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        app:layout_widthPercent="@dimen/dimen_targeta_pet_content_width_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_targeta_pet_content_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@string/font_targeta_pet_content"
                            android:text="@string/text_targeta_pet_content_3"
                            android:textAlignment="@integer/alignment_targeta_pet_content"
                            android:textColor="@color/color_targeta_pet_content"
                            android:textSize="@dimen/size_targeta_pet_content" />
                    </LinearLayout>

                    <LinearLayout
                        app:layout_widthPercent="@dimen/dimen_targeta_pet_content_width_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_targeta_pet_content_info_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@string/font_targeta_pet_content_info"
                            android:text="@string/text_targeta_pet_content_info_3"
                            android:textAlignment="@integer/alignment_targeta_pet_content_info"
                            android:textColor="@color/color_targeta_pet_content_info"
                            android:textSize="@dimen/size_targeta_pet_content_info" />
                    </LinearLayout>

                </androidx.percentlayout.widget.PercentRelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/dimen_targeta_pet_contenedor_padding_vertical">

                <androidx.percentlayout.widget.PercentRelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        app:layout_widthPercent="@dimen/dimen_targeta_pet_content_width_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_targeta_pet_content_4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@string/font_targeta_pet_content"
                            android:text="@string/text_targeta_pet_content_4"
                            android:textAlignment="@integer/alignment_targeta_pet_content"
                            android:textColor="@color/color_targeta_pet_content"
                            android:textSize="@dimen/size_targeta_pet_content" />
                    </LinearLayout>

                    <LinearLayout
                        app:layout_widthPercent="@dimen/dimen_targeta_pet_content_width_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_targeta_pet_content_info_4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@string/font_targeta_pet_content_info"
                            android:text="@string/text_targeta_pet_content_info_4"
                            android:textAlignment="@integer/alignment_targeta_pet_content_info"
                            android:textColor="@color/color_targeta_pet_content_info"
                            android:textSize="@dimen/size_targeta_pet_content_info" />
                    </LinearLayout>

                </androidx.percentlayout.widget.PercentRelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/dimen_targeta_pet_contenedor_padding_vertical">

                <androidx.percentlayout.widget.PercentRelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        app:layout_widthPercent="@dimen/dimen_targeta_pet_content_width_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_targeta_pet_content_5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@string/font_targeta_pet_content"
                            android:text="@string/text_targeta_pet_content_5"
                            android:textAlignment="@integer/alignment_targeta_pet_content"
                            android:textColor="@color/color_targeta_pet_content"
                            android:textSize="@dimen/size_targeta_pet_content" />
                    </LinearLayout>

                    <LinearLayout
                        app:layout_widthPercent="@dimen/dimen_targeta_pet_content_width_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_targeta_pet_content_info_5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@string/font_targeta_pet_content_info"
                            android:text="@string/text_targeta_pet_content_info_5"
                            android:textAlignment="@integer/alignment_targeta_pet_content_info"
                            android:textColor="@color/color_targeta_pet_content_info"
                            android:textSize="@dimen/size_targeta_pet_content_info" />
                    </LinearLayout>

                </androidx.percentlayout.widget.PercentRelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>